--- a/Area/Kantou.html
+++ b/Area/Kantou.html
@@ -85,7 +85,8 @@
             font-size: 25px;
             text-align: center;
         }
-        p{
+
+        p {
             font-size: 30px;
             text-align: center;
         }
@@ -100,7 +101,7 @@
             margin-right: auto;
             font-size: 25px;
             font-family: 'Noto Sans JP', sans-serif;
-            
+
         }
 
         td>img {
@@ -215,10 +216,46 @@
             border: solid black;
 
         }
-        .clearfix{
+
+        .clearfix {
             height: 1000px;
         }
 
+        .tyContainer {
+            border: 2px solid white;
+            width: 100px;
+            position: fixed;
+            z-index: 1;
+        }
+
+        .tyLeftSide {
+            left: 0;
+            top: 10vh;
+        }
+
+        .tyContainer div {
+            border: 1px solid white;
+            color: white;
+            background-color: black;
+            width: 100%;
+            height: 80px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .tyContainer a div:hover {
+            background-color: #f44336;
+        }
+
+        .tyContainer a {
+            text-decoration: none;
+        }
+
+        .tyContainer .tyTitle {
+            background-color: gray;
+            height: 50px;
+        }
     </style>
 </head>
 
@@ -428,6 +465,21 @@
             </div>
         </div>
     </div>
+    <!-- 左上的DIV -->
+    <div class="tyContainer tyLeftSide">
+        <div class="tyTitle">快速查詢</div>
+        <a href="#">
+            <div>機票資訊</div>
+        </a>
+        <a href="#">
+            <div>訂房資訊</div>
+        </a>
+        <a href="#">
+            <div>租車資訊</div>
+        </a>
+    </div>
+
+
     <script src="../JS/sidemenu.js"></script>
     <script>
 
