--- a/Area/Kantou.html
+++ b/Area/Kantou.html
@@ -85,7 +85,8 @@
             font-size: 25px;
             text-align: center;
         }
-        p{
+
+        p {
             font-size: 30px;
             text-align: center;
         }
@@ -100,7 +101,7 @@
             margin-right: auto;
             font-size: 25px;
             font-family: 'Noto Sans JP', sans-serif;
-            
+
         }
 
         td>img {
@@ -215,10 +216,44 @@
             border: solid black;
 
         }
-        .clearfix{
+
+        .clearfix {
             height: 1000px;
         }
 
+        #tyModal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            padding-top: 100px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+        }
+
+        .tyModalContent {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        .tyClose {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .tyClose:hover,
+        .tyClose:focus {
+            color: #000;
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -428,6 +463,14 @@
             </div>
         </div>
     </div>
+    <!--彈出欄位 -->
+    <div id="tyModal">
+        <div class="tyModalContent">
+            <span class="tyClose">&times;</span>
+            <h1>好康報報</h1>
+            <p>優惠資訊</p>
+        </div>
+    </div>
     <script src="../JS/sidemenu.js"></script>
     <script>
 
@@ -481,6 +524,18 @@
 
 
 
+    </script>
+    <script>
+        var modalElem = document.getElementById("tyModal");
+        var spanElem = document.getElementsByClassName("tyClose")[0];
+
+        spanElem.onclick = function () {
+            modalElem.style.display = "none";
+        }
+
+        setTimeout(function () {
+            modalElem.style.display = "block";
+        }, 1000);
     </script>
 
 </body>
